plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

javafx {
    version = "17"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

dependencies {
    implementation 'com.zeroc:ice:3.7.10'
}

application {
    mainClass = 'client.MainApp'
}

run {
    def javafxSdkLibPath = "C:\\Users\\David\\Downloads\\openjfx-17.0.15_windows-x64_bin-sdk\\javafx-sdk-17.0.15\\lib" // <<< ¡CAMBIA ESTA RUTA!

    jvmArgs = [
            '--module-path', javafxSdkLibPath,
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]

}